# automation-testing-patterns

./: README.md  multiple-environments.ipynb  proxy-pattern.ipynb  pyproject.toml  requirements.txt  reuse-conn.ipynb  如何让用例支持多环境.ipynb
