[tool.poetry]
name = "automation-testing-patterns"
version = "0.1.0"
description = ""
authors = ["jacexh <jace.xh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
requests = "^2.23.0"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

